# 1brc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
input/: CMakeLists.txt  main.cpp  measurement_100000.txt  measurement_cities.json  measurement_cities.txt  measurements.txt  validate_cities_format.cpp
src/final/: CMakeLists.txt  FlatMap.cpp  FlatMap.h  MemoryMappedFile.cpp  MemoryMappedFile.h  Station.h  final_implementation.cpp  util.h
src/level_0/: CMakeLists.txt  level_0_implementation.cpp
src/level_1/: CMakeLists.txt  Station.h  level_1_implementation.cpp
src/level_2/: CMakeLists.txt  FlatMap.cpp  FlatMap.h  MemoryMappedFile.h  Station.h  level_2_implementation.cpp
src/level_3/: CMakeLists.txt  FlatMap.cpp  FlatMap.h  MemoryMappedFile.h  Station.h  level_3_implementation.cpp  utility.h
src/level_4/: CMakeLists.txt  FlatMap.cpp  FlatMap.h  MemoryMappedFile.cpp  Station.h  level_4_implementation.cpp
